// rpc.proto
syntax = "proto3";

package go_protoc;
option go_package = "go_protoc";

message ChordMessage {
    uint64 nid = 1;
    enum ChordVerb {
        NEW_NODE = 0;
        DEAD_NODE = 1;
        SET_SUCC = 2;
        SET_PRED = 3;
        SET_HLGHT = 4;
        SET_KEY = 5;
        NEWS = 6;
    }
    ChordVerb verb = 2;
    string value = 3;
    string key = 4;
}

message ChordReply {
    bool reply = 1;
}

service ChordUpdate {
    rpc Update (ChordMessage) returns (ChordReply);
}